# drone

./: .gitignore  .gitmodules  Taskfile.yml  flake.nix
.claude/: settings.local.json
components/hardware/: .gitignore
components/hardware/f450_mount/: Taskfile.yml  f450_bottom_mount.scad  f450_top_mount.scad
components/hardware/rf_shield/: BOM.csv  PIN_MAPPING.txt  README.md  at86rf215_shield.kicad_pcb  at86rf215_shield.kicad_pro  at86rf215_shield.kicad_sch  at86rf215_shield.pcf  fp-lib-table  sym-lib-table
components/hardware/rf_shield/libs/: AT86RF215.kicad_sym
components/hardware/rf_shield/libs/AT86RF215.pretty/: QFN50P700X700X90-49N.kicad_mod
components/software/companion/: .gitignore  README.md  TODO.md  Taskfile.yml
components/software/companion/bootloader/: BOOTAA64.EFI
components/software/companion/firmware/: patch0.xml  rawprogram0.xml  rawprogram_esp.xml  rawprogram_wipe_esp.xml
components/software/companion/kas/: companion-dev.yml  companion-rt.yml
components/software/companion/meta-companion/conf/: layer.conf
components/software/companion/meta-companion/recipes-connectivity/usb-gadget/: usb-gadget.bb
components/software/companion/services/spi-loader/: load.sh  spi-loader.service
components/software/ground_station/: Taskfile.yml  pyproject.toml
components/software/ground_station/ground_station/: __main__.py  app.py  dsp.py  model.py  widgets.py  workers.py
components/software/ground_station/tests/: conftest.py  test_dsp.py  test_model.py  test_widgets.py  test_workers.py
(+9 files in other folders)
